# self-mahjong-app

./: .gitignore  MIGRATION.md  MIGRATION_STATUS.md  PHASE_M1_COMPLETE.md  PHASE_M2_COMPLETE.md  QUICKSTART.md  README.md  ROADMAP.md  SETUP.md  TEST_FULLSTACK.md  backend-requirements.txt  pyproject.toml  rxconfig.py
app/: __init__.py  app.py  state.py
app/components/: __init__.py  board.py  exhaustive_draw_display.py  game_end_screen.py  hand.py  mahjong_table.py  tile_image.py
app/engine/: game.py  player.py  scoring.py  tiles.py
backend/: .env.example  README.md  requirements.txt  run.py  test_api.py  test_endpoints.sh  test_simple.py
backend/app/: __init__.py  game_manager.py  routes.py  socketio_events.py
backend/app/engine/: __init__.py  game.py  player.py  scoring.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  USAGE.md
frontend/: DEBUG_STEPS.md  RESTART_REQUIRED.txt  tailwind.config.js  vite.config.ts
frontend/src/: App.simple.tsx  App.tsx  index.css
frontend/src/api/: gameApi.ts
frontend/src/components/: Board.tsx  Hand.tsx  MahjongTable.tsx  Tile.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/types/: game.ts
