[project]
name = "private-self-mahjong-reflex"
version = "0.1.0"
description = "Self-play Mahjong simulator built with Reflex for game analysis and ML training data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "reflex>=0.6.0",
    "mahjong>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
